--- a/templates/template.html
+++ b/templates/template.html
@@ -7,6 +7,17 @@
     <title>Jogoteca</title>
  </head>
 <body>
+
+        {% with messages = get_flashed_messages() %}
+            {% if messages %} 
+                <ul id="messages" class="list_unstyled">
+                {% for message in messages %}
+                    <li class="alert alert-success">{{ message }}</li>
+                {% endfor %}
+                </ul>
+            {% endif %}
+        {% endwith %}
+
     <div class="container">
         <div class="page-header">
             <h1>{{ titulo }}</h1>
